[gd_scene load_steps=3 format=3 uid="uid://wgi6lvo7wq33"]

[ext_resource type="Script" uid="uid://k8it2s8jr2qy" path="res://assets/enemy/melee_attack/melee_attack.gd" id="1_o41od"]

[sub_resource type="SphereShape3D" id="SphereShape3D_gxvxc"]
radius = 0.8

[node name="MeleeAttack" type="Node3D" node_paths=PackedStringArray("character_controller", "target", "movement")]
script = ExtResource("1_o41od")
character_controller = NodePath("")
target = NodePath("")
movement = NodePath("")

[node name="WindupTimer" type="Timer" parent="."]
one_shot = true

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.624189, 0)
shape = SubResource("SphereShape3D_gxvxc")

[connection signal="timeout" from="WindupTimer" to="." method="_on_windup_timer_timeout"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
